# solvers

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: publish_pypi.yml  sonar.yml  test.yml  test_environments.yml
docs/source/: api.rst  conf.py  index.rst  usage.rst
doplo/: doplo_solver.py
solvers/constraints/: predefined_values.py
solvers/futoshiki/: futoshiki_solver.py
solvers/killer_sudoku/: killer_sudoku_solver.py
tests/doplo/: test_doplo.py
tests/yakuso/: test_yakuso.py
yakuso/: yakuso_solver.py
