[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Andrin Meier", email = "andrin@pricemeier.ch"},
]
license-expression = "MIT"
dependencies = [
    "ortools>=9.3.10497",
]
requires-python = ">=3.7"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
