[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Andrin Meier", email = "andrin@pricemeier.ch"},
]
license-expression = "MIT"
dependencies = [
    "ortools>=9.3.10497",
    "black>=22.3.0",
    "flake8>=4.0.1",
    "pytest>=7.1.1",
    "hypothesis>=6.40.0"]
requires-python = ">=3.7"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "python main.py"
lint = "flake8 ."
format = "black ."
test = "pytest"
